--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 
 
-    <div class="main">
+<div id="main">
 
     <header>
-        <h1 id = "Title">Dr. Norman Borlaug</h1>
+        <h1 id = "title">Dr. Norman Borlaug</h1>
         <p>The man who saved a billion lives</p>
     </header>
 
@@ -21,11 +21,11 @@
             <p id = "img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
     </div>
 
-    <div class="tribute-info">
+    <div id="tribute-info">
         <h2>Here's a time line of Dr. Borlaug's life:</h2>
             <ul>
                 <li><span class="year">1914 </span>- Born in Cresco, Iowa</li>
-                <li><span class="year">1933 </span> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"/li>
+                <li><span class="year">1933 </span> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
                 <li><span class="year">1935 </span> - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me."</li>
                 <li><span class="year">1937 </span> - Finishes university and takes a job in the US Forestry Service</li>   
                 <li><span class="year">1938 </span> - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.</li>    
@@ -41,19 +41,19 @@
                 <li><span class="year">2005 </span> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
                 <li><span class="year">2005 </span> - dies at the age of 95.</li>  
             </ul>
+    </div>
 
-            <blockquote >
-                <p>Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress.</p>
-                <footer>--Indian Prime Minister Manmohan Singh</footer>
-            </blockquote>
+        <blockquote>
+            <p>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
+            <footer>--Indian Prime Minister Manmohan Singh</footer>
+        </blockquote>
 
-        </div>
 
-    <div>
+    <div class="learn-more">
         <p>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlaug " id="tribute-link" target="_blank">Wikipedia entry.</a></p>
     </div>
 
-    </div>
+</div>
 
 </body>
 </html>
