page is now responsive and looks like final intended version

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     </header>
 
     <div id="img-div">
-            <img src="images/Dr.Norman Borlaug.jpg" alt="" id = "image">
+            <img src="images/Dr.Norman Borlaug.jpg" alt="Dr. Norman with a team of biologists in a wheat feild located in mexico " id = "image">
             <p id = "img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
     </div>
 
     <div id="tribute-info">
+
         <h2>Here's a time line of Dr. Borlaug's life:</h2>
+        
             <ul>
                 <li><span class="year">1914 </span>- Born in Cresco, Iowa</li>
                 <li><span class="year">1933 </span> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
@@ -41,9 +43,10 @@
                 <li><span class="year">2005 </span> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
                 <li><span class="year">2005 </span> - dies at the age of 95.</li>  
             </ul>
+        
     </div>
 
-        <blockquote>
+            <blockquote>
             <p>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
             <footer>--Indian Prime Minister Manmohan Singh</footer>
         </blockquote>
